--- a/index.html
+++ b/index.html
@@ -107,14 +107,9 @@
           </tr>
         </table>
         <h2>Como funciona</h2>
-        <p>De acordo com fontes próximas do Google, os óculos vão contar com
-          uma pequena tela
+        <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela
           de LCD ou AMOLED na parte
-          superior
-          e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar
-          opções
-          com
-          o movimento da cabeça.</p>
+          superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça.</p>
 
         <h2>O que você pode fazer com o Google Glasses</h2>
         <p>O vídeo de divulgação do Google mostra que você pode se
